supplier automate test scripts

--- a/config/config.ini
+++ b/config/config.ini
@@ -3,19 +3,22 @@ driver_name = chromedriver.exe
 ;driver_name = chromedriver
 
 [supplier]
-domain = test-g.qipeipu.net
-username = gd1
-password = c123456
+domain = xxx
+username = xxx
+password = xxx
 ;多个订单以逗号分隔
-order_number = O60015365,O60015319
+order_number = xxx
 ;1表示拆包，0表示不拆包
 unpack = 1
 
 [factory]
-domain = test-www.qipeipu.net
-username = gd1
-password = c123456
-inquiry_no = R4136951
+domain = xxx
+username = xxx
+password = xxx
+inquiry_no = xxx
+;1表示拆包，0表示不拆包
+unpack = 1
+parts_maximum = 6
 
 
 
